--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
       <div class="row">
         <div class="about-img">
-          <img src="img/store-hypall.jpg" alt="" />
+          <img src="img/logo-ipal.jpeg" alt="" />
         </div>
         <div class="content">
           <h3>Kenapa memilih toko kami?</h3>
